--- a/id3.man
+++ b/id3.man
@@ -134,10 +134,11 @@ in particular, any variable interpreted still counts as a wildcard, see
 below.
 .TP
 .BI \-D " filename
-duplicate and use the tags found in \fIfilename\fR as the starting point for
-the new tag to write, instead of the tag already present in the files being
-tagged. This only applies to the tag being written, and does not affect
-ordinary substitution of variables.
+duplicate and copy the tags found in \fIfilename\fR to the target files
+The tag in each file is replaced after any variables have been read, but
+before any fields are updated. Any original tag values not explicitly copied
+to the new tag (for example, by using -u) are lost. If \fIfilename\fR does not
+have any tags, this option is identical to the -d option.
 .TP
 .BI \-R " pattern
 search the directory hierarchy rooted at each \fIfilespec\fR for files
