*** empty log message ***

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ Changelog for 'id3'.
 
 2006-040 (W06):
   lyrics3.cpp/getlyr3.cpp created
+  getid3v2.cpp/id3v2.c: added/fixed check for silly id3v2 frames
 
 2006-039 (W06):
   setid3.cpp: also writes id3v1.0 tags if possible.
